use correct function to determine with of line number characters

tested locally, this yields often 1 or 2 extra pixels
compared to what we did before

BUG: 430712